--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.2
 Django==3.2.15
 djangorestframework==3.14.0
+drf-yasg[validation]==1.21.4
 pytz==2022.4
 sqlparse==0.4.3
 tzdata==2022.4
