OS-7 add github build

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,7 +28,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        pytest -x -vv
+        python manage.py test
     - name: Test with pylama
       run: |
         pylama
