--- a/pylama.ini
+++ b/pylama.ini
@@ -1,7 +1,7 @@
 [pylama]
 linters = pep8,pyflakes,pylint
 format = pylint
-ignore = W0707, E266, C0301, C0115, C0103, C0114, C0116, E0611, C0415, E1101, R0913, W0511, R0914, W0231, W0223, R0903, W1202, W0212
+ignore = W0707, E266, C0301, C0115, C0103, C0114, C0116, E0611, C0415, E1101, R0913, W0511, R0914, W0231, W0223, R0903, W1202, W0212, W0311
 skip = venv/*,*/migrations/*,audit/*
 [pep8]
 max_line_length = 140
